syntax = "proto3";
package inputconvert;

option go_package = "github.com/saintecroix/diplom/proto";

service InputConvertService {
    rpc ConvertExcelData(ConvertExcelDataRequest) returns (ConvertExcelDataResponse) {}
}

message ConvertExcelDataRequest {
  string file_path = 1;
}

message ConvertExcelDataResponse {
  repeated string results = 1;
  string error = 2;
}